Fixed recurring white space issue at bottom of page

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 
 .App-header {
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
